Update scenario's settings table

--- a/relazione.tex
+++ b/relazione.tex
@@ -594,7 +594,7 @@ vengono allenati per 3 giorni prima dell'inizio della simulazione per generare p
 \begin{table}[hb]
     \centering
     \caption{Tabella riepilogativa della configurazione usata nelle simulazioni.}
-    \begin{tabular}{ |p{8cm}|p{3cm}|  }
+    \begin{tabular}{ |p{8cm}|p{4cm}|  }
         \hline
         \multicolumn{2}{|c|}{Scenario di simulazione}                                               \\
         \hline
@@ -603,7 +603,7 @@ vengono allenati per 3 giorni prima dell'inizio della simulazione per generare p
         Tempo limite di simulazione                     & 72h                                       \\
         Nodi coinvolti                                  & 140                                       \\
         Dimensione campo di simulazone                  & $(100 \times 100) mt\textsuperscript{2}$  \\
-        Tipo di distribuzione dei nodi                  & uniforme                                  \\
+        Tipo di distribuzione dei nodi                  & randomica uniforme                        \\
         Massimo jitter consentito                       & 100ms                                     \\
         Frequenza di aggiornamento indirizzi di wake up & 300s                                      \\
         Tentativi per livello                           & 3                                         \\
