--- a/relazione.tex
+++ b/relazione.tex
@@ -619,8 +619,8 @@ vengono allenati per 3 giorni prima dell'inizio della simulazione per generare p
 \section{Valutazione delle prestazioni}
 
 In questo lavoro abbiamo mantenuto costanti le configurazioni mostrate in \textbf{Tabella 4.1} per tutti gli esperimenti, variando il parametro
-di \emph{inter-arrival time} (\emph{iaTime}). Questo parametro stabilisce la frequenza di generazione dei pacchetti che è definito come
-$1/iaTime$.\\
+di \emph{inter-arrival time} (\emph{iaTime}). Questo parametro stabilisce la frequenza di generazione dei pacchetti che è definita come
+$1/iaTime$ millisecondi.\\
 
 Tutti i dati riportati fanno riferimento ad un numero di esecuzioni sufficientemente elevato da fornire un intervallo di confidenza del 95\% con una precisione
 del 5\% ed i risultati finali sono considerati come la media dei risultati individuali ottenuti da ciascuna di esse.
